--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -12,5 +12,8 @@
   },
   "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "@svgr/webpack": "^8.1.0"
+  }
 }
